syntax = "proto3";

message TemplateRequest {
  string template_id = 1;
}

message Template {
  string template_id = 1;
  optional string title = 2;
  optional string description = 3;
  uint32 created_at = 4;
  string data = 5;
}
